plugins/file-open-save/core/src/main/javascript/app/components/folder/folder.css
/*!
 * PENTAHO CORPORATION PROPRIETARY AND CONFIDENTIAL
 *
 * Copyright 2017 Pentaho Corporation (Pentaho). All rights reserved.
 *
 * NOTICE: All information including source code contained herein is, and
 * remains the sole property of Pentaho and its licensors. The intellectual
 * and technical concepts contained herein are proprietary and confidential
 * to, and are trade secrets of Pentaho and may be covered by U.S. and foreign
 * patents, or patents in process, and are protected by trade secret and
 * copyright laws. The receipt or possession of this source code and/or related
 * information does not convey or imply any rights to reproduce, disclose or
 * distribute its contents, or to manufacture, use, or sell anything that it
 * may describe, in whole or in part. Any reproduction, modification, distribution,
 * or public display of this information without the express written authorization
 * from Pentaho is strictly prohibited and in violation of applicable laws and
 * international treaties. Access to the source code contained herein is strictly
 * prohibited to anyone except those individuals and entities who have executed
 * confidentiality and non-disclosure agreements or other agreements with Pentaho,
 * explicitly covering such access.
 */

/* FOLDER */
folder .folder {
  line-height: 18px;
  padding: 5px 0;
  cursor: pointer;
  white-space: nowrap;
  width: 100%;
}

folder .folder:hover {
  background-color: #E6EFF6;
}

folder .folder.recents {
  margin-top: 5px;
  margin-bottom: 5px;
}

folder .folder.public {
  margin-top: 5px;
}

folder .folder.opened {
  /*margin-bottom: 5px;*/
}

folder .folder.selected {
  background-color: #005DA6;
  color: #FFF;
}

folder.dark .folder.selected {
	background-color: #0F2B5B;
}

folder .folder .folderArrowWrapper,
folder .folder .folderArrow,
folder .folder .folderImage,
folder .folder .folderName {
  display: inline-block;
  vertical-align: top;
}

/* FOLDER ARROWS (expand/collapse) states */
folder .folder .folderArrowWrapper {
  height: 20px;
  width: 12px;
  margin-left: 10px;
  float: left;
}

folder .folder .folderArrow {
  background: url("../../img/chevron_right_tree.svg") no-repeat left center;
  height: 20px;
  width: 6px;
  float: right;
}

folder .folder.selected .folderArrow {
  background: url("../../img/chevron_right_tree.svg") no-repeat right center;
}

folder .folder.opened .folderArrow {
  background: url("../../img/chevron_down_tree.svg") no-repeat left center;
  height: 20px;
  width: 10px;
}

folder .folder.opened.selected .folderArrow {
  background-position: right center;
}

folder .folder.empty .folderArrow {
  background: none;
}

/* FOLDER image states */
folder .folder .folderImage {
  background: url("../../img/folder.svg") no-repeat left center;
  height: 20px;
  width: 16px;
  margin-left: 10px;
  float: left;
}

folder .folder.recents .folderImage {
  background: url("../../img/recents.svg") no-repeat left center;
}

folder .folder.home .folderName, folder .folder.public .folderName {
  text-transform: capitalize;
}

folder .folder.home .folderImage {
  background: url("../../img/home.svg") no-repeat left center;

}

folder .folder.public .folderImage {
  background: url("../../img/public.svg") no-repeat left center;
}

folder .folder.selected .folderImage {
  background-position: right center;
}

folder .folder .folderName {
  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
  -moz-user-select: none; /* mozilla browsers */
  -ms-user-select: none; /* IE10+ */
  height: 20px;
  line-height: 20px;
  margin-left: 10px;
}

